--- a/index.html
+++ b/index.html
@@ -13,5 +13,5 @@
 <p>His real name is Beakhyun Byun.</p>
 <p> Ability for concept is Light, and his slogon is be Brave, Be Humble.</p>
 <p>His trypical nickname is Kyoong.</p>
-<img src="https://img.theqoo.net/proxy/https://i.imgur.com/S7N3BvE.gif" width="500px">
+<img src="e3a2a083ee3c19c78fcfcb359a6d2d03.jpg" width="500px">
 <img src="https://mblogthumb-phinf.pstatic.net/MjAxNzAyMjZfMTA2/MDAxNDg4MDkzNzUxOTM2.Fq46GKuTryCT6mHnJqOl6vi5Ql9CTjz-98uXiJoy58Eg.-froHRsBta0vCRLhukEbcs6yDLGwsIIhimr2VTYbuTsg.JPEG.eldorado0507/IMG_20170225_035513.jpg?type=w800" width="300x">
